--- a/about-us.html
+++ b/about-us.html
@@ -142,5 +142,12 @@
   <div class="abstract-shape shape1"></div>
   <div class="abstract-shape shape2"></div>
   <div class="abstract-shape shape3"></div>
+  <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px;"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!" />
+    </a>
+</p>
 </body>
 </html>
