--- a/jungle.html
+++ b/jungle.html
@@ -183,5 +183,12 @@
     </div>
   </footer>
 <script src="biome.js"></script>
+<p>
+  <a href="https://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+      src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+      alt="Valid CSS!" />
+  </a>
+</p>
 </body>
 </html>
