--- a/maldives.html
+++ b/maldives.html
@@ -130,6 +130,13 @@
   // Run init function once DOM is fully loaded
   document.addEventListener('DOMContentLoaded', init);
 </script>
+<p>
+  <a href="https://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+      src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+      alt="Valid CSS!" />
+  </a>
+</p>
 </body>
 </html>
 
